--- a/picker-app/src/styles/globals.scss
+++ b/picker-app/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@use "./reset";
+
 html,
 body {
   padding: 0;
@@ -11,11 +13,3 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-p {
-  padding: 0;
-  margin: 0;
-}
