--- a/picker-app/src/styles/globals.scss
+++ b/picker-app/src/styles/globals.scss
@@ -1,11 +1,12 @@
 @use './reset';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&family=Roboto+Condensed:wght@400;700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Noto Sans JP','Roboto Condensed', sans-serif;
+  font-weight: 400;
 }
 
 a {
